--- a/main.html
+++ b/main.html
@@ -7,8 +7,40 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<main>
+		<form action="/submit" method="post">
+			<label for="name">Name</label>
+			<input id="name" name="name" type="text" required><br>
+
+			<label for="email">Email</label>
+			<input id="email" name="email" type="email" required><br>
+
+			<p>Gender</p>
+			<label for="gender_m">Male</label>
+			<input id="gender_m" name="gender" required type="radio"><br>
+			<label for="gender_f">Female</label>
+			<input id="gender_f" name="gender" type="radio" required><br>
+
+			<label for="cars">Choose Cars</label>
+			<select id="cars">
+				<option value="BMW">BMW</option>
+				<option value="Audi">Audi</option>
+				<option value="Mercedez">Mercedez</option>
+			</select><br>
+
+			<label for="carage">CarAge</label>
+			<input id="carage" required name="carage" type="text"><br>
+
+			<label for="dop">Date of Purchase</label>
+			<input id="dop" name="dop" required type="date"><br>
+
+			<label for="password">Password</label>
+			<input id="password" type="password" required namae="password"><br>
+
+			<button type="submit">Submit</button>
+		</form>
+	</main>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
